Revert all the changes made by Angelee by copying code from my last commits in github and pasting them here

--- a/index_splash.html
+++ b/index_splash.html
@@ -1,110 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Gather & Savor | Welcome</title>
-		<link rel="stylesheet" href="style.css">
-
-		<style>
-			
-			.splash-hero {
-				text-align: center;
-				padding: 4rem 2rem;
-				max-width: 600px;
-				margin: 0 auto;
-			}
-
-			.logo-large {
-				font-size: 3rem;
-				font-weight: bold;
-				color: var(--primary-color, #d97706); /* fallback color */
-				margin-bottom: 1rem;
-			}
-
-			.auth-buttons {
-				display: flex;
-				gap: 1rem;
-				justify-content: center;
-				flex-wrap: wrap;
-				margin: 2rem 0;
-			}
-
-			.secondary-btn {
-				background: transparent;
-				color: var(--primary-color, #d97706);
-				border: 2px solid var(--primary-color, #d97706);
-				padding: 0.75rem 1.5rem;
-				border-radius: 8px;
-				text-decoration: none;
-
-			}
-
-			.demo-link {
-				margin-top: 2rem;
-				opacity: 0.8;
-			}
-
-			.feautures-preview {
-				display: grid;
-				grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-				gap: 2rem;
-				padding: 3rem 2rem;
-				max-width: 1200px;
-				margin: 0 auto;
-
-			}
-
-			.feature-card {
-				background: white;
-				padding: 2rem;
-				border-radius: 12px;
-				box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-				text-align: center;
-
-			}
-
-			.feature-card h3 {
-				font-size: 1.5rem;
-				margin-bottom: 0.5rem;
-			}
-
-			.splash-container {
-				min-height: 100vh;
-				background: linear-gradient(135deg, #fef3c7 0%, #fbbf24 100%);
-	</head>
-</style>
-	<body>
-		<main class="splash-container">
-			<div class="splash-hero">
-				<div class="logo-large">Gather & Savor</div>
-				<h1>Plan Smarter. Eat Better</h1>
-				<p>Your personal recipe finder, weekly meal planner, and smart shopping list generator.</p>
-
-			<div class="auth-buttons">
-				<a class="btn primary-btn" href="login.php">Login</a>
-				<a class="btn secondary-btn" href="register.php">Sign Up Free</a>
-			</div>
-
-				<p class="demo-link">
-					<a href="Home.php">Demo as Guest --> </a>
-				</p>
-			</div>
-
-			<section class="features-preview">
-				<div class="feature-card">
-					<h3>Weekly Meal Planner</h3>
-					<p>Drag & drop recipes to plan your entire week.</p>
-				</div>
-				<div class="feature-card">
-					<h3>Smart Favorites</h3>
-					<p>Save recipes you love for quick access.</p>
-				</div>
-				<div class="feature-card">
-					<h3>Auto Shopping List</h3>
-					<p>Generate grocery lists from your meal plans.</p>
-				</div>
-			</section>
-		</main>
-	</body>
+<head>
+	<meta charset="utf-8">
+	<meta  name="viewport" content="width-device-width, initial-scale=1.0">
+	<title>Gather & Savor | Welcome</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<main class="splash-container">
+		<h1>Welcome to Gather & Savor</h1>
+		<p>Your personal recipe finder and weekly meal planner.</p>
+		<a class="btn primary-btn" href="Home.php">Enter site</a>
+	</main>
+</body>
 </html>
